k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rafael-cordones-me
  labels:
    app.kubernetes.io/name: rafael-cordones-me
